refactor: change in compress in real time folder
